[package]
edition = "2021"
name = "facial"
version = "0.1.0"
authors = ["Mykhailo Marynenko <0x77dev@protonmail.com>"]
documentation = "https://github.com/revive-tools/facial"
readme = "README.md"
homepage = "https://revive.tools/"
license = "GPL-3.0"
license-file = "LICENSE"
keywords = ["facial", "recognition", "napi", "dlib", "landmarks", "locations"]

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.3.3", default-features = false, features = ["napi6"] }
napi-derive = "2.3.3"
dlib-face-recognition = { version = "0.2.2", features = ["embed-all"] }
image = "0.23"
lazy_static = "1.4.0"

[build-dependencies]
napi-build = "1.2.1"

[profile.release]
lto = true
